Remove check for GLES3 in SDFShader

Qt doesn't actually support GLES3 and will insert incorrect stuff into
the shader if we use GLSL 300. So remove the check for now and instead
just always use GLES2.

BUG: 426458